k8s/simple-deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: staging
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonar-server
  namespace: staging
spec:
  selector:
    matchLabels:
      run: sonar-server
  # remove replica if using gitops
  replicas: 1
  template:
    metadata:
      labels:
        run: sonar-server
    spec:
      containers:
      - name: sonar-server
        image: smartcloud2022/car-service:v1
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 200m
            memory: 256Mi
          requests:
            cpu: 200m
            memory: 256Mi
