k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sonar-server
  namespace: staging
spec:
  ports:
  - port: 80
  selector:
    run: sonar-server
